<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SignInActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/ask_sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmailPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border_edittext"
            android:textCursorDrawable="@null"
            android:ems="10"
            android:hint="@string/email_phone"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border_edittext"
            android:textCursorDrawable="@null"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAskSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@null"
            android:onClick="onClicktvSignUp"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/ask_sign_up" />

        <TextView
            android:id="@+id/tvAskPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@null"
            android:onClick="onClicktvPassword"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/ask_password" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/ibFacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/facebook"
            android:src="@drawable/button_border" />

        <ImageButton
            android:id="@+id/ibGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/google"
            android:src="@drawable/button_border" />
    </RelativeLayout>
</LinearLayout>