<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@drawable/back_arrow" />

    <TextView
        android:id="@+id/tvPassResetMess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="@string/password_recovery_mess"
        />

    <TextView
        android:id="@+id/tvOPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="@string/password_reset_OTP"
        />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_border_edittext"
        android:textCursorDrawable="@null"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvPassword_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="@string/password_reset_pass"
        />

    <EditText
        android:id="@+id/etPassword_PassReset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_border_edittext"
        android:textCursorDrawable="@null"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvConfirm_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="@string/password_reset_pass_confirm"
        />

    <EditText
        android:id="@+id/etConfirm_PassReset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_border_edittext"
        android:textCursorDrawable="@null"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <Button
        android:id="@+id/bReset_ResetPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/password_reset_pass_reset"
        android:textColor="#FFFFFF" />

</LinearLayout>