<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.PasswordResetRequestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@drawable/back_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/forgot_password_msg"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingLeft="32dp"
            android:paddingEnd="32dp"
            android:paddingRight="32dp">

            <RadioButton
                android:id="@+id/rb_SMS"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/primary_color_textview"
                android:buttonTint="@color/colorPrimary"
                android:onClick="onClick"
                android:text="@string/option_sms"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/rb_Email"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/primary_color_textview"
                android:buttonTint="@color/colorPrimary"
                android:onClick="onClick"
                android:text="@string/option_email"
                android:textSize="25sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/etSubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border_edittext"
            android:textCursorDrawable="@null"
            android:ems="10"
            android:padding="10dp"/>

        <Button
            android:id="@+id/bSubmit"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/submit"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>