<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@drawable/back_arrow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/su_full_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etName_SignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_border_edittext"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvEmail_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmail_SignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_border_edittext"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvPhone_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPhone_SignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_border_edittext"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:inputType="phone"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvAddress_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/su_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etAddress_SignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_border_edittext"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvDOB_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/su_dob"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etDOB_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/rounded_border_edittext"
                    android:ems="10"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textCursorDrawable="@null"
                    android:focusable="false"
                    />

                <ImageButton
                    android:id="@+id/ibDob_SignUp"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_calendar"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvGender_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/su_gender"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:id="@+id/rgGender_SignUp" >

                <RadioButton
                    android:id="@+id/rbGenderF_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/su_gender_female"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbGenderM_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/su_gender_male"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvPassword_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPassword_PassReset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_border_edittext"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvConfirm_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etConfirm_PassReset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_border_edittext"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/colorRed"
                android:text="@string/su_msg" />

            <Button
                android:id="@+id/bSignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_corner_button"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>